# mini-player

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README-modular.md  README.md  TROUBLESHOOTING.md  app.spec  bump_version_and_tag.sh  dev_install.sh  fix_import_error.sh  main.py  migrate.sh  migrate_settings.py  mini-player.desktop  pyproject.toml  requirements.txt  run.sh  setup.py
.github/workflows/: release.yml
src/: __init__.py  app.py
src/miniplayer/: __init__.py  app.py
src/miniplayer/core/: __init__.py  audio_player.py  config_manager.py  track_manager.py
src/miniplayer/ui/: __init__.py  main_window.py  playlist_widget.py
src/miniplayer/utils/: __init__.py  helpers.py
