[build-system]
requires = ["setuptools>=67.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-player_mohannad21"
version = "1.0.0"
authors = [
    {name = "Mohannad Abdulaziz", email = "mohannadabdo21@gmail.com"},
]
description = "Audio player with speed control"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
dependencies = ["PyQt6>=6.0.0", "mutagen>=1.45.1"]

[project.scripts]
mini-player = "miniplayer.app:main"

[tool.setuptools]
packages = ["miniplayer", "miniplayer.core", "miniplayer.ui", "miniplayer.utils"]
package-dir = {"miniplayer" = "src/miniplayer"}
include-package-data = true

[tool.setuptools.package-data]
miniplayer = [
    "../icons/*",
    "../default_album.png",
    "mini_player.ini"
]

# Corrected data-files section - now using proper dictionary format
[tool.setuptools.data-files]
"share/icons/hicolor/scalable/apps" = ["src/icons/mini-player.svg"]
"share/icons/hicolor/48x48/apps" = ["src/icons/mini-player-48.png"]
"share/icons/hicolor/256x256/apps" = ["src/icons/mini-player-256.png"]
"share/applications" = ["mini-player.desktop"]
